--- a/.github/workflows/codestats.yml
+++ b/.github/workflows/codestats.yml
@@ -21,6 +21,6 @@ jobs:
         run: python codestats_box.py
         env:
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
-          GIST_ID: ${{ secrets.GIST_ID }}
-          CODE_STATS_USERNAME: ${{ secrets.CODE_STATS_USERNAME }}
-          STATS_TYPE: ${{ secrets.STATS_TYPE }}
+          GIST_ID: f1ec1c18708d63faaf996f0c844572e5
+          CODE_STATS_USERNAME: WillyJL
+          STATS_TYPE: recent-xp
